# wrapper

./: .gitignore  .readthedocs  README.rst  pyproject.toml  requirements.txt  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml
axterdb/: client.py  errors.py  wrapper.py
docs/: client.rst  clients.rst  conf.py  index.rst  installing.rst  quickstart.rst  requirements.txt
docs/extensions/: attributetable.py
examples/: basic.py
